tests/NormalTests/paczka1/fuzzy1/72775707.err
Error in line 9: OcRWl A165 80,3
Error in line 15: OcRWl S46 92,2
Error in line 18: OcRWl A165 35,3
Error in line 20: 8wp5smo S221 76,6
Error in line 19: OcRWl A407 20,0
Error in line 14: S46 S46 24,3
Error in line 21: 8wp5smo A165 76,8
Error in line 23: kN3qT S221 41,1
